--- a/mask.ipynb
+++ b/mask.ipynb
@@ -275,10 +275,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 5ms/step - accuracy: 0.9655 - loss: 0.1141\n"
+     ]
+    }
+   ],
+   "source": [
+    "val_loss, val_acc = model.evaluate(x_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model.save('epic_num_reader.keras')"
+   ]
   },
   {
    "cell_type": "code",
